k8s/base/backend/scrubs-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: scrubs-api
  name: scrubs-api-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: scrubs-api
  type: ClusterIP
